# semi-supervised-image-processing

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md  cli_reference.md  data_audit.md  dataset.md  evaluation.md  feature_extraction.md  glossary.md  index.md  performance.md  presentation.md  reproducibility.md  setup.md  training.md  troubleshooting.md
mri_dataset_brain_cancer_oc/: Jeu de Données d'Images Cérébrales pour la Détection de Tumeurs.txt
notes/: clustering_metrics.md  scaleup_plan.md  training_report.md
outputs/: README.md
outputs/features/: metadata.json
outputs/figures/: .gitkeep
outputs/notes/: data_audit.md  feature_summary.md
outputs/tables/: directory_summary.csv  image_summary.csv
reports/: final_summary.md
scripts/: generate_model_comparison.py  generate_reporting_assets.py
src/: __init__.py  clustering.py  data_audit.py  export_unlabeled_cohort.py  feature_extraction.py  semi_supervised_training.py  standardize_features.py  supervised_training.py  threshold_sweep.py
src/training/: common.py  semi_supervised.py  supervised.py
tables/: scaleup_estimate.csv
