[project]
name = "semi-supervised-image-processing"
version = "0.1.0"
description = "Utilities for auditing and exploring semi-supervised MRI datasets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=9.0",
    "scikit-learn>=1.3",
    "tabulate>=0.9",
    "torch>=2.0",
    "torchvision>=0.15",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv]
dev-dependencies = []
